@@ -16,7 +16,7 @@
  * along with this program; if not, write to the Free Software
  * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
  *
- * $Id: drawboard.c,v 1.25 2002/08/31 18:00:11 thyssen Exp $
+ * $Id: drawboard.c,v 1.26 2003/04/04 20:41:59 thyssen Exp $
  */
 
 #include "config.h"
@@ -588,7 +588,7 @@ extern void CanonicalMoveOrder( int an[] ) {
 
     int i;
 
-    for( i = 0; i < 4 && an[ 2 * i ] > 0; i++ )
+    for( i = 0; i < 4 && an[ 2 * i ] > -1; i++ )
 	;
     
     qsort( an, i, sizeof( int ) << 1, CompareMoves );
@@ -904,7 +904,7 @@ extern int ParseMove( char *pch, int an[ 8 ] ) {
     }
 
     if( i < 8 )
-	an[ i ] = 0;
+      an[ i ] = -1;
 
     CanonicalMoveOrder( an );
     
